# Vera_Rig

./: Cargo.toml  README.md
characters/Alya/: character.json
src/: main.rs  memory.rs
src/characteristics/: adjectives.rs  bio.rs  lore.rs  mod.rs  post_examples.rs  styles.rs  topics.rs
src/core/: agent.rs  character.rs  characteristics.rs  instruction_builder.rs  mod.rs  runtime.rs
src/providers/: mod.rs  twitter.rs
